# file_signature

./: .gitignore  README.md
src/: CMakeLists.txt  FileSignature.cpp  FileSignature.h  main.cpp
src/FileSignature/: CMakeLists.txt  FileSignature.cpp  FileSignature.h
src/test/: CMakeLists.txt  test.cpp
